--- a/themes/stelfox-dark/assets/css/style.css
+++ b/themes/stelfox-dark/assets/css/style.css
@@ -82,6 +82,10 @@ a:hover {
   text-decoration: underline;
 }
 
+a:active {
+  color: #1f6feb;
+}
+
 strong {
   font-weight: 600;
 }
